# sem-merge

./: .coverage  .gitignore  .pre-commit-hooks.yaml  README.md  Taskfile.yml  pyproject.toml
.cursor/rules/: sem-merge-intelligence.mdc
example_conversations/: cursor_create_git_precommit_hook_for_me.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
sem-merge/: .pre-commit-hooks.yaml
sem-merge/src/sem_merge/: prompts.py
sem-merge/tests/: __init__.py
src/sem_merge/: __main__.py  cache.py  git_ops.py  merger.py  prompts.py
tests/: test_cache.py  test_integration.py  test_merger.py
